Solucionados problemas con hash